--- a/index.html
+++ b/index.html
@@ -159,8 +159,12 @@
                   To serve any Organization
                 </span>
               </li>
+              
 
             </ul>
+            <a href="/assets/images/I_link_Resume.pdf" download class="submit-btn">
+                        <button>Download CV</button>
+                      </a>
 
             <a href="#portfolio" class="slide-down-btn" aria-label="scroll down">
               <ion-icon name="arrow-down" aria-hidden="true"></ion-icon>
